Melis Messenger: change the layout of form User Profile: fixed the email overflow and change tab icon for messenger

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2949,6 +2949,9 @@ div#modal-user-management div.widget {
     letter-spacing: 0.4px;
     text-align: left;
     line-height: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .u-lists .fa {
